# routes/task.routes.js
@@ -1,6 +1,7 @@
 const Router = require('express')
 const router = new Router()
 const TaskController = require('../controller/task.controller')
+const authMiddleware = require('../middleware/auth.middleware')
 const {check} = require('express-validator');
 const {errorMsg} = require('../scripts/checkReqError');
 
@@ -11,7 +12,7 @@ router.post('/task/', [
     // check('dateOfCreation').isISO8601().toDate(),
 ], errorMsg, TaskController.createTask)
 
-router.get('/task/:id', TaskController.getTask)
+router.get('/task/:id', authMiddleware, TaskController.getTask)
 
 router.get('/subtask/:id', TaskController.getSubtask)
 router.put('/task/', TaskController.updateTask)
